Fixed padding issue on home page. Removed extra space from bottom of content

--- a/src/containers/Pages/Home/Home.module.css
+++ b/src/containers/Pages/Home/Home.module.css
@@ -1,5 +1,5 @@
 .Content {
     background-color: #b98d5d;
-    padding: 30px;
+    padding: 30px 30px 0px 30px;
     border-radius: 0px 0px 30px 30px;
 }
